Fix alignment of the email popup button

--- a/shared/scss/popup.scss
+++ b/shared/scss/popup.scss
@@ -591,6 +591,7 @@ body {
 
 .email-alias-block {
     display: block;
+    padding-left: 24px;
     color: inherit;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     cursor: pointer;
@@ -638,7 +639,7 @@ body {
     height: 24px;
     width: 24px;
     // The icon is larger than usual, so we adjust its position to maintain alignment
-    margin: -6px -2px -4px 0;
+    margin: -6px -2px -4px -4px;
 }
 
 @import "views/search-form";
